--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,9 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: utf8
+  database: d5jifndskircpj
+  port: 5432
+  username: udnfxlawvgwshl
+  password: i2ax9Narm8T8E5CAzQOH9QeIVK
